Fix minor layout issues in emergent menu

--- a/styles/layout-tablet.css
+++ b/styles/layout-tablet.css
@@ -68,11 +68,7 @@ body {
 }
 
 [class$="-menu-section"] {
-  width: 50%;
-}
-
-[class$="-menu-section"]:nth-child(2n) {
-  align-items: flex-end;
+  min-height: 164px;
 }
 
 .menu-element {
